# textEditor

./: CMakeLists.txt  README  Text Editor Checklist.md  Text Editor MWP tasks.txt  TextEditor.csproj  TextEditor.sln  mwp_editor_doc.md  output.txt  test.json
project/: test.txt
project/.editor/: settings.txt
src/: App.axaml  App.axaml.cs  App.cs  EditorEnvironment.cs  Environment.cpp  Environment.hpp  Program.cs  program.cpp  program.hpp
src/Extensions/: Extensions.cpp  Extensions.hpp
src/ProjectConfigDir/: ProjectConfigs.cpp  ProjectConfigs.hpp
src/Settings/: Editor.hpp  Workspace.hpp
src/Theme/GrammarGenerator/: Grammar.cpp  Grammar.hpp
src/Theme/HighlightRuleGenerator/: HighlightRuleGenerator.cpp  HighlightRuleGenerator.hpp
src/Theme/ThemeGenerator/: Theme.cpp  Theme.hpp
src/addonManager/: AddonManager.cs
src/command/: CommandEntry.cs  Commands.cs
src/extensionMethods/: ColorExtension.cs
src/extensions/: ExtensionManifest.cs  Extensions.cs
src/server/: ClientConnection.cs  PackageManeger.cs  Server.cs
src/settings/: EditorPreference.cs  EditorSettings.cs  FileStructure.md  GlobalStorage.cs  ProjectConfigs.cs  WorkspaceSettings.cs
src/systaxHighlighing/: Highligher.cs
src/themes/: ThemeLoader.cs  Themes.cs
src/types/: ColorType.cs
src/window/: DraggableTabWidget.cpp  DraggableTabWidget.hpp  EditorWindow.cs  Highlighter.cpp  Highlighter.hpp  MainEditorWindow.cpp  MainEditorWindow.hpp  ProjectFileExplorer.cpp  ProjectFileExplorer.hpp  WindowTheme.cpp  WindowTheme.hpp
src/window/Editors/: CodeEditorWidget.cpp  CodeEditorWidget.hpp
(+13 files in other folders)
